# kafka-poc

./: .gitignore  Makefile  README.md  consumer1.js  docker-compose-multiple-kafka-kraft.yml  docker-compose-single-kafka-kraft.yml  docker-compose-single-kafka-zk.yml  package.json  producer1.js
consumer/: Dockerfile  consumer1.js  consumer2.js
consumer/node/: consumer1.js  consumer2.js  influxdb-consumer-1.js  package.json  redis-consumer-1.js
consumer/python/: Dockerfile  Makefile  consumer1.py  influxdb-consumer-1.py  redis-consumer-1.py  requirements.txt
consumer/rust/: Cargo.toml  Dockerfile
consumer/rust/src/: main.rs
docker-compose/kraft/single_broker/: docker-compose-multiple-producers-multiple-produces.yml  docker-compose-multiple-producers-one-consumer.yml  docker-compose-one-producer-one-consumer.yml
docker-compose/zookeeper/multiple_brokers/: docker-compose.yml
docker-compose/zookeeper/single_broker/: docker-compose.yml
kraft/multiple_brokers/: docker-compose-multiple-kafka-kraft.yml
kraft/single_broker/: docker-compose-multiple-producers-one-consumer.yml  docker-compose-one-producer-one-consumer.yml
publisher/: Dockerfile  package.json  producer1.js  publisher1.js  publisher2.js
zookeeper/: docker-compose-single-kafka-zk.yml
zookeeper/single_broker/: docker-compose.yml
