[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }